# sovereign--financial-cockpit

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  APIgemini  Dockerfile  Makefile  Monthly Billing Invoice Statement Template.xlsx  README.md  SECURITY.md  app.py  app_database.db  billEndorsement.js  clausescanner.sh  config.py  creditReportAnalysis.js  creditorManager.js  database.js  docker-compose.yml  endorsecoupon.py  fdcpaLogger.js  index.html  package-lock.json  package.json  pyproject.toml  remedygenerator.sh  requirements-dev.txt  sample_bill.txt  style.css  tmp_precommit_dump.txt  vehicleFinancing.js  vite.config.js
AutoTender_Sovereign/: coupon_annotator.py
AutoTender_Sovereign-master/: edit.txt  prompt.txt
backend/: .env.example  app.py  config.py  endorsecoupon.py  requirements.txt  sample_contract.txt
config/: private_key.pem.pub  sovereign_overlay.yaml
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  PURGE-PRIVATE-KEY.md  architecture.md  financial_health_checklist.md  generational_wealth.md  income_stream_guide.md  know_your_rights.md  process_overview.md  strawman_and_sovereignty.md
frontend/: package-lock.json  package.json  vite.config.js
modules/: Ucc3_Endorsements.py  attach_endorsement_to_pdf.py  auto_tender.py  bill_parser.py  credit_report_parser.py  database.py  endorsement_engine.py  signature_agent.py  utils.py
routes/: generator_routes.py
src/: App.css  App.jsx  index.css  index.html
static/: billEndorsement.js  constants.js  creditReportAnalysis.js  creditReportVisualizer.js  creditorManager.js  main.js  (+14 more)
(+107 files in other folders)
